# vending-machine

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  conftest.py  constants.py  machine.py  models.py  product.py  pyproject.toml  sonar-project.properties  test_machine.py  timeline.py
.github/workflows/: python-test.yml
instance/: database.db
static/: swagger.json
tests/: conftest.py  test_machine.py  test_product.py  test_timeline.py
