[tool.poetry]
name = "vending-machine"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vending_machine"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
pre-commit = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
