[tool.poetry]
name = "vending-machine"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
pre-commit = "^3.0.3"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
flask-sqlalchemy = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
